--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,20 @@ body {
 }
 
 .site-wrapper .outro {
+  background-image: url(/images/Compressed/Outro.jpg);
   overflow: hidden;
+  background-size: cover;
+  background-position-y: 28%;
+  background-repeat: no-repeat;
+}
+
+.site-wrapper .outro::before {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  padding: 70px;
 }
 
 .site-wrapper .top-float-text {
@@ -146,7 +159,7 @@ body {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1200px) {
   .site-wrapper .top-float-text,
   .site-wrapper .bottom-float-text {
     display: none;
@@ -161,15 +174,6 @@ body {
 .site-wrapper #bottom-float-text-1 {
   bottom: -450px;
   left: -22%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-1 {
-    top: -660px;
-  }
-  .site-wrapper #bottom-float-text-1 {
-    bottom: -784px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -191,15 +195,6 @@ body {
   left: -24%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-2 {
-    top: -1771px;
-  }
-  .site-wrapper #bottom-float-text-2 {
-    bottom: -1910px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-2 {
     right: -13%;
@@ -217,15 +212,6 @@ body {
 .site-wrapper #bottom-float-text-3 {
   bottom: -2640px;
   left: -23.5%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-3 {
-    top: -2892px;
-  }
-  .site-wrapper #bottom-float-text-3 {
-    bottom: -3008px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -249,15 +235,6 @@ body {
   left: -22%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-4 {
-    top: -4004px;
-  }
-  .site-wrapper #bottom-float-text-4 {
-    bottom: -4118px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-4 {
     top: -3810px;
@@ -277,15 +254,6 @@ body {
 .site-wrapper #bottom-float-text-5 {
   bottom: -4762px;
   left: -20.3%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-5 {
-    top: -5123px;
-  }
-  .site-wrapper #bottom-float-text-5 {
-    bottom: -5222px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -309,15 +277,6 @@ body {
   left: -24%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-6 {
-    top: -6231px;
-  }
-  .site-wrapper #bottom-float-text-6 {
-    bottom: -6355px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-6 {
     top: -5938px;
@@ -337,15 +296,6 @@ body {
 .site-wrapper #bottom-float-text-7 {
   bottom: -6978px;
   left: -23.5%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-7 {
-    top: -7345px;
-  }
-  .site-wrapper #bottom-float-text-7 {
-    bottom: -7470px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -369,15 +319,6 @@ body {
   left: -22%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-8 {
-    top: -8500px;
-  }
-  .site-wrapper #bottom-float-text-8 {
-    bottom: -8619px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-8 {
     top: -8076px;
@@ -397,15 +338,6 @@ body {
 .site-wrapper #bottom-float-text-9 {
   bottom: -9282px;
   left: -23%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-9 {
-    top: -9618px;
-  }
-  .site-wrapper #bottom-float-text-9 {
-    bottom: -9745px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -429,15 +361,6 @@ body {
   left: -20.3%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-10 {
-    top: -10743px;
-  }
-  .site-wrapper #bottom-float-text-10 {
-    bottom: -10849px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-10 {
     top: -10210px;
@@ -457,15 +380,6 @@ body {
 .site-wrapper #bottom-float-text-11 {
   bottom: -11282px;
   left: -20.3%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-11 {
-    top: -11859px;
-  }
-  .site-wrapper #bottom-float-text-11 {
-    bottom: -11976px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -489,15 +403,6 @@ body {
   left: -22%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-12 {
-    top: -12986px;
-  }
-  .site-wrapper #bottom-float-text-12 {
-    bottom: -13099px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-12 {
     top: -12362px;
@@ -517,15 +422,6 @@ body {
 .site-wrapper #bottom-float-text-13 {
   bottom: -13518px;
   left: -20.3%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-13 {
-    top: -14099px;
-  }
-  .site-wrapper #bottom-float-text-13 {
-    bottom: -14212px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -549,15 +445,6 @@ body {
   left: -23%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-14 {
-    top: -15220px;
-  }
-  .site-wrapper #bottom-float-text-14 {
-    bottom: -15343px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-14 {
     top: -14487px;
@@ -577,15 +464,6 @@ body {
 .site-wrapper #bottom-float-text-15 {
   bottom: -15700px;
   left: -22%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-15 {
-    top: -16338px;
-  }
-  .site-wrapper #bottom-float-text-15 {
-    bottom: -16462px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -609,15 +487,6 @@ body {
   left: -23%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-16 {
-    top: -17458px;
-  }
-  .site-wrapper #bottom-float-text-16 {
-    bottom: -17589px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-16 {
     top: -16618px;
@@ -637,15 +506,6 @@ body {
 .site-wrapper #bottom-float-text-17 {
   bottom: -17959px;
   left: -19%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-17 {
-    top: -18581px;
-  }
-  .site-wrapper #bottom-float-text-17 {
-    bottom: -18689px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -669,15 +529,6 @@ body {
   left: -19%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-18 {
-    top: -19702px;
-  }
-  .site-wrapper #bottom-float-text-18 {
-    bottom: -19801px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-18 {
     top: -18761px;
@@ -697,15 +548,6 @@ body {
 .site-wrapper #bottom-float-text-19 {
   bottom: -19981px;
   left: -19.5%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-19 {
-    top: -20821px;
-  }
-  .site-wrapper #bottom-float-text-19 {
-    bottom: -20925px;
-  }
 }
 
 @media (min-width: 1441px) {
@@ -729,15 +571,6 @@ body {
   left: -22.4%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-20 {
-    top: -21941px;
-  }
-  .site-wrapper #bottom-float-text-20 {
-    bottom: -22057px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-20 {
     top: -20899px;
@@ -759,15 +592,6 @@ body {
   left: -20.3%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-21 {
-    top: -23061px;
-  }
-  .site-wrapper #bottom-float-text-21 {
-    bottom: -23168px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-21 {
     top: -21960px;
@@ -786,16 +610,7 @@ body {
 
 .site-wrapper #bottom-float-text-22 {
   bottom: -23262px;
-  left: -20.3%;
-}
-
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-22 {
-    top: -24177px;
-  }
-  .site-wrapper #bottom-float-text-22 {
-    bottom: -24296px;
-  }
+  left: -22%;
 }
 
 @media (min-width: 1441px) {
@@ -805,7 +620,7 @@ body {
   }
   .site-wrapper #bottom-float-text-22 {
     bottom: -22847px;
-    left: -15.5%;
+    left: -17%;
   }
 }
 
@@ -819,15 +634,6 @@ body {
   left: -18.7%;
 }
 
-@media (max-width: 600px) {
-  .site-wrapper #top-float-text-23 {
-    top: -25298px;
-  }
-  .site-wrapper #bottom-float-text-23 {
-    bottom: -25400px;
-  }
-}
-
 @media (min-width: 1441px) {
   .site-wrapper #top-float-text-23 {
     top: -24097px;
@@ -836,6 +642,48 @@ body {
   .site-wrapper #bottom-float-text-23 {
     bottom: -23896px;
     left: -14.5%;
+  }
+}
+
+.site-wrapper #top-float-text-24 {
+  top: -25557px;
+  right: -17%;
+}
+
+.site-wrapper #bottom-float-text-24 {
+  bottom: -25426px;
+  left: -18.7%;
+}
+
+@media (min-width: 1441px) {
+  .site-wrapper #top-float-text-24 {
+    top: -25162px;
+    right: -13%;
+  }
+  .site-wrapper #bottom-float-text-24 {
+    bottom: -24966px;
+    left: -14.5%;
+  }
+}
+
+.site-wrapper #top-float-text-25 {
+  top: -26645px;
+  right: -17%;
+}
+
+.site-wrapper #bottom-float-text-25 {
+  bottom: -26426px;
+  left: -22%;
+}
+
+@media (min-width: 1441px) {
+  .site-wrapper #top-float-text-25 {
+    top: -26227px;
+    right: -13%;
+  }
+  .site-wrapper #bottom-float-text-25 {
+    bottom: -26079px;
+    left: -17%;
   }
 }
 
@@ -996,25 +844,28 @@ body {
 }
 
 .site-wrapper .picture-21 {
-  background: url(../images/Compressed/Devaramane.jpg) no-repeat center 65% fixed;
+  background: url(../images/Compressed/Devaramane.jpg) no-repeat center 75% fixed;
   background-size: cover;
 }
 
 .site-wrapper .picture-22 {
-  background: url(../images/Compressed/Shravanabelagola.jpg) no-repeat center 18% fixed;
+  background: url(../images/Compressed/Gokarna.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
 .site-wrapper .picture-23 {
-  background: url(../images/Compressed/Waynad.jpg) no-repeat center 44% fixed;
+  background: url(../images/Compressed/Waynad.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
-@media (max-width: 700px) {
-  .site-wrapper .picture-23 {
-    background: url(../images/Compressed/Waynad.jpg) no-repeat 27% 44% fixed;
-    background-size: cover;
-  }
+.site-wrapper .picture-24 {
+  background: url(../images/Compressed/Coorg.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+
+.site-wrapper .picture-25 {
+  background: url(../images/Compressed/Jog.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 .site-wrapper .container-1 {
@@ -1128,14 +979,24 @@ body {
 }
 
 .site-wrapper .container-23 {
-  background: #3b3355;
+  background: #728c35;
+  overflow: hidden;
+}
+
+.site-wrapper .container-24 {
+  background: #685044;
+  overflow: hidden;
+}
+
+.site-wrapper .container-25 {
+  background: #333533;
   overflow: hidden;
 }
 
 .site-wrapper .credits {
   background: #0b090a;
-  padding: 0px 10px 20px 10px;
-  margin-top: -50px;
+  padding: 10px 10px 20px 10px;
+  margin-top: 0px;
 }
 
 .site-wrapper .credits a {
@@ -1194,7 +1055,7 @@ body {
 }
 
 .site-wrapper .scrollToprocket img {
-  width: 60px;
+  width: 50px;
 }
 
 .site-wrapper .scrollToprocket:hover {
