--- a/css/style.scss
+++ b/css/style.scss
@@ -112,7 +112,7 @@ body {
         }
     }
     .outro {
-        background-image: url(/images/Compressed/Outro.jpg);
+        background-image: url(../images/Compressed/Outro.jpg);
         overflow: hidden;
         background-size: cover;
         background-position-y:28%;
