--- a/css/style.css
+++ b/css/style.css
@@ -701,7 +701,7 @@ body {
 
 @media (max-width: 700px) {
   .site-wrapper .picture-1 {
-    background: url(../images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
+    background: url(../images/Compressed/Yercard.png) no-repeat 85% center fixed;
     background-size: cover;
   }
 }
