--- a/css/style.scss
+++ b/css/style.scss
@@ -730,7 +730,7 @@ body {
 
     @media (max-width:700px) {
         .picture-1 {
-            background: url(../images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
+            background: url(../images/Compressed/Yercard.png) no-repeat 85% center fixed;
             background-size: cover;
         }
     }
