--- a/css/style.scss
+++ b/css/style.scss
@@ -724,13 +724,13 @@ body {
 
 
     .picture-1 {
-        background: url(../images/Compressed/Yercard.png) no-repeat center center fixed;
+        background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-1 {
-            background: url(../images/Compressed/Yercard.png) no-repeat 85% center fixed;
+            background: url(../images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
             background-size: cover;
         }
     }
@@ -746,13 +746,13 @@ body {
     }
 
     .picture-4 {
-        background: url(../images/Compressed/Agumbe.png) no-repeat center center fixed;
+        background: url(../images/Compressed/Agumbe.jpeg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-4 {
-            background: url(../images/Compressed/Agumbe.png) no-repeat 37% center fixed;
+            background: url(../images/Compressed/Agumbe.jpeg) no-repeat 37% center fixed;
             background-size: cover;
         }
     }
