--- a/css/style.scss
+++ b/css/style.scss
@@ -724,7 +724,7 @@ body {
 
 
     .picture-1 {
-        background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Yercard.jpg) no-repeat center center;
         background-size: cover;
     }
 
