--- a/css/style.scss
+++ b/css/style.scss
@@ -751,7 +751,7 @@ body {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        
+
     }
 
     .picture-3 {
@@ -775,6 +775,8 @@ body {
             background: url(../images/Compressed/Agumbe.jpeg) no-repeat 37% center fixed;
             background-size: cover;
             background-attachment:fixed;
+            height: 100%;
+            width: 100%;
         }
     }
 
