--- a/css/style.scss
+++ b/css/style.scss
@@ -40,16 +40,22 @@ body {
             margin: auto;
 
             .short-description{
-                font-size: 30px;
+                font-size: 2em;
                 font-weight: 300;
                 line-height: 1.6;
                 color: #fff;
                 text-align: justify;
             }
+
+            @media (max-width:1440px) {
+                .short-description{
+                    font-size: 1.75em;
+                }
+            }
     
             @media (max-width:700px) {
                 .short-description{
-                    font-size: 17px;
+                    font-size: 1.25em;
                     text-align: left;
                 }
             }
@@ -57,17 +63,12 @@ body {
 
         @media (max-width:900px) {
             .container-text {
-                width: 70%;
+                width: 75%;
             }
-        }
-
-        @media (max-width:700px) {
-            .container-text {
-                width: 60%;
-            }
-        }             
+        }            
             
     }
+
     #customsvg {
         background: #0b090a;
         margin-bottom: -4px;
@@ -724,7 +725,7 @@ body {
 
 
     .picture-1 {
-        background: url(../images/Compressed/Yercard.jpg) no-repeat center center;
+        background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
         background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -746,7 +747,6 @@ body {
     .picture-2 {
         background: url(../images/Compressed/Gandikota.jpg) no-repeat center center fixed;
         background-size: cover;
-        background-attachment:fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -761,22 +761,17 @@ body {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        background-attachment:fixed;
     }
 
     .picture-4 {
-        background: url(../images/Compressed/Agumbe.jpeg) no-repeat center center fixed;
+        background: url(../images/Compressed/Agumbe.jpg) no-repeat center center fixed;
         background-size: cover;
-        background-attachment:fixed;
     }
 
     @media (max-width:700px) {
         .picture-4 {
-            background: url(../images/Compressed/Agumbe.jpeg) no-repeat 37% center fixed;
+            background: url(../images/Compressed/Agumbe.jpg) no-repeat 37% center fixed;
             background-size: cover;
-            background-attachment:fixed;
-            height: 100%;
-            width: 100%;
         }
     }
 
@@ -1046,6 +1041,13 @@ body {
         overflow:hidden;
     }
 
+    @media (max-width:700px) {
+        .container-1,.container-2,.container-3,.container-4,.container-5,.container-6,.container-7,.container-8,.container-9,.container-10,.container-11,.container-12,.container-13,.container-14,.container-15,.container-16,.container-17,.container-18,.container-19,.container-20,.container-21,.container-22,.container-23,.container-24,.container-25 {
+            height: auto;
+            padding: 100px 0px 100px 0px;
+        }
+    }
+
     .credits {
         background: #0b090a;
         padding: 10px 10px 20px 10px;
@@ -1083,7 +1085,7 @@ body {
         }  
         .credits-text-smaller {
             color: white;
-            font-size: 16px;
+            font-size: 1em;
             line-height: 1.8;
             text-align: center;
 
@@ -1170,3 +1172,35 @@ body {
   }
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.bg-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.bg {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    transform: translateZ(0);
+    will-change: transform;
+}
