--- a/css/style.scss
+++ b/css/style.scss
@@ -7,9 +7,12 @@
     font-family: 'Playfair Display', serif;
 }
 
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     scroll-behavior: smooth;
 }
+
 
 @mixin align-center {
     display: flex;
@@ -26,6 +29,7 @@ body {
 
 .site-wrapper {
     width: 100%;
+    height: 100%;
     margin: 0px;
 
     .container {
@@ -721,200 +725,11 @@ body {
         text-align: center;
         position: relative;
         color: white;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
-
-
-    .picture-1 {
-        background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
-        background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-1 {
-            background: url(../images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
-            background-size: cover;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-        }
-    }
-
-    .picture-2 {
-        background: url(../images/Compressed/Gandikota.jpg) no-repeat center center fixed;
-        background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-
-    }
-
-    .picture-3 {
-        background: url(../images/Compressed/Kovalam.jpg) no-repeat center center fixed;
-        background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-
-    .picture-4 {
-        background: url(../images/Compressed/Agumbe.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-4 {
-            background: url(../images/Compressed/Agumbe.jpg) no-repeat 37% center fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-5 {
-        background: url(../images/Compressed/Badami.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-5 {
-            background: url(../images/Compressed/Badami.jpg) no-repeat 40% center fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-6 {
-        background: url(../images/Compressed/EttinaBuja.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-6 {
-            background: url(../images/Compressed/EttinaBuja.jpg) no-repeat 45% center fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-7 {
-        background: url(../images/Compressed/Goa.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-8 {
-        background: url(../images/Compressed/Belur.jpg) no-repeat bottom center fixed;
-        background-size: cover;
-    }
-
-    .picture-9 {
-        background: url(../images/Compressed/Kodachadri.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-9 {
-            background: url(../images/Compressed/Kodachadri.jpg) no-repeat 31% center fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-10 {
-        background: url(../images/Compressed/Pattadkal.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-10 {
-            background: url(../images/Compressed/Pattadkal.jpg) no-repeat 38% center fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-11 {
-        background: url(../images/Compressed/Pondicherry.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-12 {
-        background: url(../images/Compressed/Ramanagar.jpg) no-repeat top center fixed;
-        background-size: cover;
-    }
-
-    .picture-13 {
-        background: url(../images/Compressed/Aihole.jpg) no-repeat top center fixed;
-        background-size: cover;
-    }
-
-    .picture-14 {
-        background: url(../images/Compressed/Banasura.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-15 {
-        background: url(../images/Compressed/Hampi.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-16 {
-        background: url(../images/Compressed/HidlumaneFalls.jpg) no-repeat center 79% fixed;
-        background-size: cover;
-    }
-
-    .picture-17 {
-        background: url(../images/Compressed/Ooty.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-18 {
-        background: url(../images/Compressed/Mysore.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-19 {
-        background: url(../images/Compressed/Melkote2.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-20 {
-        background: url(../images/Compressed/Anjanadri.jpg) no-repeat center 30% fixed;
-        background-size: cover;
-    }
-
-    @media (max-width:700px) {
-        .picture-20 {
-            background: url(../images/Compressed/Anjanadri.jpg) no-repeat 33% 30% fixed;
-            background-size: cover;
-        }
-    }
-
-    .picture-21 {
-        background: url(../images/Compressed/Devaramane.jpg) no-repeat center 75% fixed;
-        background-size: cover;
-    }
-
-    .picture-22 {
-        background: url(../images/Compressed/Gokarna.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-23 {
-        background: url(../images/Compressed/Waynad.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-24 {
-        background: url(../images/Compressed/Coorg.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
-    .picture-25 {
-        background: url(../images/Compressed/Jog.jpg) no-repeat center center fixed;
-        background-size: cover;
-    }
-
 
     .container-1 {
         background:#d19652;
@@ -1172,17 +987,6 @@ body {
   }
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-section {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 .bg-wrap {
     clip: rect(0, auto, auto, 0);
     position: absolute;
@@ -1198,9 +1002,33 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: center center;
     transform: translateZ(0);
     will-change: transform;
 }
+
+ @media (max-width:700px) {
+        .picture-1 {
+            background-position: 85% center;
+        }
+        .picture-4 {
+            background-position: 37% center;
+        }
+        .picture-5 {
+            background-position: 40% center;
+        }
+        .picture-6 {
+            background-position: 45% center;
+        }
+        .picture-9 {
+            background-position: 31% center;
+        }
+        .picture-10 {
+            background-position: 38% center;
+        }
+        .picture-10 {
+            background-position:  33% 30%;
+        }
+    }
