--- a/css/style.css
+++ b/css/style.css
@@ -958,6 +958,12 @@ html, body {
   }
 }
 
+section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .bg-wrap {
   clip: rect(0, auto, auto, 0);
   position: absolute;
@@ -973,7 +979,7 @@ html, body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
