--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,6 @@
   font-family: 'Playfair Display', serif;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-  scroll-behavior: smooth;
-}
-
 .light {
   color: #fff;
 }
@@ -56,7 +50,7 @@ html, body {
 
 @media (max-width: 1440px) {
   .site-wrapper .container .container-text .short-description {
-    font-size: 1.75em;
+    font-size: 2em;
   }
 }
 
@@ -988,7 +982,12 @@ section {
 }
 
 .picture-1 {
-  background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
+  background: url("../images/Compressed/Yercard.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+
+.picture-2 {
+  background: url("../images/Compressed/Agumbe.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
