--- a/css/style.scss
+++ b/css/style.scss
@@ -1005,11 +1005,11 @@ section {
 }
 
 
-.picture-1 {
+.picturetest-1 {
     background: url('../images/Compressed/Yercard.jpg') no-repeat center center fixed;
     background-size: cover;
 }
-.picture-2 {
+.picturetest-2 {
     background: url('../images/Compressed/Agumbe.jpg') no-repeat center center fixed;
     background-size: cover;
 }
